[project]
name = "arris-exporter"
version = "0.1.0"
description = "Prometheus exporter for Arris S33 DOCSIS 3.1 cable modem"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28",
    "prometheus-client>=0.21",
]

[project.scripts]
arris-exporter = "arris_exporter:main"
